Wavefront (.OBJ) Experimental ignoring polygroup/vertex group attributes #98874

Closed
opened 2022-06-14 08:47:18 +02:00 by Vlad Kuzmin · 7 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.77

Blender Version
Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-26 13:12, hash: bf53956914
Worked: Wavefront (.OBJ) (old importer)

Short description of error
Wavefront (.OBJ) Experimental ignoring polygroup/vertex group attributes.
image.png
Old importer have option for preserving playgroups and import them correctly:
image.png

Exact steps for others to reproduce the error
import attached Obj file using new experimental OBJ importer and do same with old one and polygroups option enabled.
0.obj

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.77 **Blender Version** Broken: version: 3.2.0 Beta, branch: master, commit date: 2022-05-26 13:12, hash: `bf53956914` Worked: Wavefront (.OBJ) (old importer) **Short description of error** Wavefront (.OBJ) Experimental ignoring polygroup/vertex group attributes. ![image.png](https://archive.blender.org/developer/F13160761/image.png) Old importer have option for preserving playgroups and import them correctly: ![image.png](https://archive.blender.org/developer/F13160888/image.png) **Exact steps for others to reproduce the error** import attached Obj file using new experimental OBJ importer and do same with old one and polygroups option enabled. [0.obj](https://archive.blender.org/developer/F13160791/0.obj)
Author

Added subscriber: @ssh4

Added subscriber: @ssh4

Added subscriber: @aras_p

Added subscriber: @aras_p
Aras Pranckevicius self-assigned this 2022-06-14 09:11:14 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks, will look at it

Thanks, will look at it

This issue was referenced by c5c384d6ea

This issue was referenced by c5c384d6eadf0a6698511cb8d81fb975389cc9ac

This issue was referenced by 91b5254598

This issue was referenced by 91b52545989ce29c6cd350a99191accf23d3d9dd

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:02 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98874
No description provided.